--- a/views/questions/new.ejs
+++ b/views/questions/new.ejs
@@ -2,18 +2,6 @@
 
 <h1>New Question</h1>
 
-<form action="/questions" method="post">
-  <div>
-    <label for="title">Title</label>
-    <input type="text" id="title" name="title">
-  </div>
-
-  <div>
-    <label for="description">Description</label>
-    <textarea id="description" name="description"></textarea>
-  </div>
-
-  <input type="submit" name="submit" value="Submit"/>
-</form>
+<%- include('./_form', {question: question, method: 'post'}) %>
 
 <%- include('../partials/footer') %>
