--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -5,6 +5,10 @@
   <p><%= question.description %></p>
   <p><strong>Created At:</strong> <%= question.createdAt %></p>
 
+  <!-- EDIT LINK -->
+  <a href="/questions/<%= question.id %>/edit">Edit</a>
+
+  <!-- DELETE BUTTON -->
   <form action="/questions/<%= question.id %>" method="post">
     <input type="hidden" name="_method" value="delete"/>
     <input type="submit" value="Delete"/>
